mjs/tests/invalid_syntax/classes.js
class Something {
  constructor() {
    this.name = "thing";
  }
}
